# cavalier_contours

./: .gitignore  CHANGELOG.md  CNAME  Cargo.toml  LICENSE-MIT  README.md  buildFFI.sh  cavalier_contours_ffi.h  cavalier_contours_ui.js  cavalier_contours_ui_bg.wasm  index.html  sw.js
.github/workflows/: ci.yml  pages.yml
cavalier_contours/: Cargo.toml
cavalier_contours/benches/: benches.rs  shape_borrowed_api.rs  test_polylines.rs
cavalier_contours/src/: base_math.rs  base_traits.rs  circle_circle_intersect.rs  lib.rs  line_circle_intersect.rs  line_line_intersect.rs  macros.rs  pline_seg.rs  pline_seg_intersect.rs  pline_vertex.rs  polyline.rs  polyline_intersects.rs  polyline_offset.rs  utils.rs  vector2.rs
cavalier_contours/src/core/: mod.rs
cavalier_contours/src/core/math/: base_math.rs  circle_circle_intersect.rs  line_circle_intersect.rs  line_line_intersect.rs  mod.rs  vector2.rs
cavalier_contours/src/core/traits/: control_flow.rs  fuzzy_eq.rs  fuzzy_ord.rs  mod.rs  real.rs
cavalier_contours/src/polyline/: mod.rs  pline.rs  pline_inversion_view.rs  pline_seg.rs  pline_seg_intersect.rs  pline_types.rs  pline_vertex.rs  pline_view.rs  traits.rs
cavalier_contours/src/polyline/internal/: mod.rs  pline_boolean.rs  pline_contains.rs  pline_intersects.rs  pline_offset.rs
cavalier_contours/src/shape/: mod.rs
cavalier_contours/src/shape_algorithms/: mod.rs
cavalier_contours/tests/: test_circle_circle_intersect.rs  test_line_circle_intersect.rs  test_line_line_intersect.rs  test_multi_pline_parallel_offset.rs  test_pline_basics.rs  test_pline_boolean.rs  test_pline_contains.rs  test_pline_parallel_offset.rs  test_pline_seg_intersect.rs  test_pline_view.rs  test_pline_winding_number.rs  test_polyline_slice.rs  test_shape_boolean.rs  test_shape_parallel_offset.rs  test_winding_number.rs
cavalier_contours/tests/test_utils/: debug.rs  mod.rs  pline_modifiers.rs  pline_test_properties.rs
cavalier_contours_ffi/: Cargo.toml  README.md
cavalier_contours_ffi/src/: error_handling.rs  lib.rs
cavalier_contours_ffi/tests/: test_pline.rs
cavalier_contours_ffi/tests/macros/: mod.rs
cavalier_contours_ui/: Cargo.toml  README.md  index.html  release.toml
cavalier_contours_ui/assets/: manifest.json
cavalier_contours_ui/src/: app.rs  lib.rs  main.rs  theme.rs
cavalier_contours_ui/src/editor/: components.rs  mod.rs
cavalier_contours_ui/src/plotting/: mod.rs  pline.rs  plines.rs  raw_pline_offset_segs.rs  shape.rs
cavalier_contours_ui/src/scenes/: demo_scenes_pane.rs  mod.rs  multi_pline_boolean_scene.rs  multi_pline_offset_scene.rs  pline_boolean_scene.rs  pline_offset_scene.rs  scene_settings.rs  shape_boolean_scene.rs
docs/: shape_boolean_test_plan.md
examples/: Cargo.toml  README.md  basic_geometric.rs  basic_polyline.rs  boolean_ops.rs  geometric_properties.rs  intersections.rs  iteration.rs  parallel_offsets.rs  segments.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: pline_inversion_view_boolean.rs  shape_boolean_adversarial_corpus.rs  shape_boolean_arcs.rs  shape_boolean_deep_nesting.rs  shape_boolean_donuts.rs  shape_boolean_polygons.rs  shape_boolean_rects.rs  shape_boolean_singularity_corpus.rs  shape_boolean_vertex_drag_rebuilt.rs  shape_boolean_vertex_drag_ui.rs  shape_boolean_vertex_drag_ui_xor.rs  shape_transform_then_boolean.rs  support.rs
test_suite/: Cargo.toml
test_suite/tests/: test_pline.rs
test_suite/tests/macros/: mod.rs
