[package]
authors = ["Buck McCready <jbuckmccready@gmail.com>"]
categories = ["algorithms", "data-structures", "graphics", "mathematics"]
description = "2D polyline/shape library for offsetting, combining, etc."
edition = "2021"
keywords = ["algorithm", "2d", "computational", "geometry", "spatial"]
license = "MIT OR Apache-2.0"
name = "cavalier_contours"
readme = "../README.md"
repository = "https://github.com/jbuckmccready/cavalier_contours"
version = "0.3.0"

[features]
allow_unsafe = [] # feature has no explicit dependencies

[dependencies]
num-traits = "0.2"
serde = {version = "1.0", optional = true, features = ["derive"]}
static_aabb2d_index = "1.0"
