[package]
name = "cavalier_contours"
description = "2D polyline/shape library for offsetting, combining, etc."
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []
# Enable serde serialize/deserialize for polylines and vertexes
serde = ["dep:serde"]
# Enable unsafe optimizations in the static_aabb2d_index dependency
unsafe_optimizations = ["static_aabb2d_index/unsafe_optimizations"]

[dependencies]
num-traits = "0.2"
serde = {version = "1.0", optional = true, features = ["derive"]}
static_aabb2d_index = "2.0"
