[package]
authors = ["Buck McCready <jbuckmccready@gmail.com>"]
categories = ["algorithms", "data-structures", "graphics", "mathematics"]
description = "C foreign function interface for the cavalier_contours crate"
edition = "2021"
keywords = ["algorithm", "2d", "computational", "geometry", "spatial"]
license = "MIT OR Apache-2.0"
name = "cavalier_contours_ffi"
repository = "https://github.com/jbuckmccready/cavalier_contours"
version = "0.4.0"

[lib]
# using "lib" so this crate can be referenced and used directly by rust and "cdylib" so it can be used as a dynamic lib
crate-type = ["lib", "cdylib"]

[dependencies]
cavalier_contours = {version = "0.4", path = "../cavalier_contours"}
