[package]
name = "cavalier_contours_ffi"
description = "C foreign function interface for the cavalier_contours crate"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
version.workspace = true

[lib]
# using "lib" so this crate can be referenced and used directly by rust and "cdylib" so it can be used as a dynamic lib
crate-type = ["lib", "cdylib"]

[dependencies]
cavalier_contours = {version = "0.7", path = "../cavalier_contours"}
