[package]
authors = ["Buck McCready <jbuckmccready@gmail.com>"]
edition = "2018"
name = "test_suite"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cavalier_contours = {path = "../cavalier_contours"}
cavalier_contours_ffi = {path = "../cavalier_contours_ffi"}
